--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title> Test page </title>
 </head>
 <body>
-  <h1> This is a test page </title>
+  <h1> This is a test page </h1>
 </body>
 </html>
